# Satellite_Desktop_upscaler

./: .gitattributes  .gitignore  PRD.md  README.md  TASKS.md  TASKS_bootstrap.md  pyproject.toml  ralphy-tasks.json
app/: __init__.py  band_handling.py  band_profile_store.py  dataset_analysis.py  dry_run.py  error_handling.py  hardware_profile.py  imagery_policy.py  inference_adapter.py  job_pipeline.py  job_queue.py  job_runner.py  metadata.py  model_entrypoints.py  model_installation.py  model_selection.py  model_wrapper.py  mosaic_detection.py  output_metadata.py  processing_report.py  provider_detection.py  recommendation.py  run_settings.py  session.py  stitching.py  structured_logging.py  ui.py  update_checks.py  upscale_execution.py  validation.py  validation_baselines.py
backend/: main.py
docs/: gpl_optional_models.md  model_comparison_notes.md  packaging.md  repo_conventions.md  tech_stack.md  troubleshooting.md  user_guide.md  validation_baselines.md
models/: license_verification.json  registry.json
scripts/: __init__.py  build_targets.py  generate_release_checksums.py  hardware_targets.py  package_linux.sh  package_macos.sh  package_windows.ps1  validate_cloud_dataset.py  validate_eo_dataset.py  validate_eo_models.py  validate_sentinel2_dataset.py
tests/: test_backend_main.py  test_band_handling.py  test_band_profile_store.py  test_build_targets.py  test_cloud_validation.py  test_dataset_analysis.py  test_dry_run.py  test_eo_model_validation.py  test_error_handling.py  test_export_metadata_warning.py  test_hardware_profile.py  test_hardware_targets.py  (+45 more)
(+32 files in other folders)
